@@ -1,6 +1,9 @@
 2013-06-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* eww.el (eww-tag-select): Don't render totally empty <select> forms.
+	(eww-convert-widgets): Don't bug out if the first widget starts at the
+	beginning of the buffer.
+	(eww-convert-widgets): Fix last patch.
 
 	* shr.el (shr-insert-table): Respect border-collapse: collapse.
 	(shr-tag-base): Protect against base specs that are degenerate.
